@@ -80,6 +80,10 @@ Keep relative URIs within ROOT_URI.
 Parse INPUT as a string (terminates options).
 
 .TP
+\fB\-t\fR
+Write terser output without newlines.
+
+.TP
 \fB\-v\fR
 Display version information and exit.
 
